--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/DefaultMap.DefaultMap
-GameDefaultMap=/Game/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Map/ConsolePython.ConsolePython
+GameDefaultMap=/Game/Map/ConsolePython.ConsolePython
 GlobalDefaultGameMode=/Game/BP_PyGamePlay.BP_PyGamePlay_C
 
 [/Script/Engine.PhysicsSettings]
@@ -51,5 +51,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
